--- a/pages/self/bio.html
+++ b/pages/self/bio.html
@@ -16,11 +16,7 @@ decorated terrarian, one of like a dozen bmc flash players, and an avid
 gungeoneer. i also have 4,500 hours in geometry dash.
 </p>
 
-<h3>and here's a few of projects</h3>
-<p>
-in addition to this website, i've also got a collection of projects i've been
-working on:
-</p>
+<h3>and here's a few of my projects</h3>
 <ul>
     <li>to          ::: heavily wip lfs package manager</li>
     <li>to-pkgs     ::: to's package repository</li>
