--- a/pages/self/bio.html
+++ b/pages/self/bio.html
@@ -10,7 +10,7 @@
 <h3>hi im tox</h3>
 <p>
 i daily drive linux from scratch. i'm a cs major. i'm nocturnal. i'm an
-anarchocommunist, an antitheisst, and generally an iconoclast. i love  music,
+anarchocommunist, an antitheist, and generally an iconoclast. i love  music,
 especially the experimental, niche, and abrasive. i'm a celeste grandmaster, a
 decorated terrarian, one of like a dozen bmc flash players, and an avid
 gungeoneer. i also have 4,500 hours in geometry dash.
