--- a/pages/self/bio.html
+++ b/pages/self/bio.html
@@ -10,21 +10,22 @@
 <h3>hi im tox</h3>
 <p>
 i daily drive linux from scratch. i'm a cs major. i'm nocturnal. i'm an
-anarchocommunist, an antitheist, and generally an iconoclast. i love  music,
+anarchocommunist, an antitheist, and generally an iconoclast. i love music,
 especially the experimental, niche, and abrasive. i'm a celeste grandmaster, a
 decorated terrarian, one of like a dozen bmc flash players, and an avid
 gungeoneer. i also have 4,500 hours in geometry dash.
 </p>
 
-<h3>and here's a few of my projects</h3>
+<h3>and here are a few of my projects, in no particular order</h3>
 <ul>
-    <li>to          ::: heavily wip lfs package manager</li>
-    <li>to-pkgs     ::: to's package repository</li>
-    <li>tuun        ::: mpv-based music player</li>
-    <li>rip         ::: music rippepr</li>
-    <li>lfstage     ::: lfs stage file generator</li>
-    <li>permitit    ::: cute error handling crate</li>
-    <li>catfetch    ::: cute fetch script featuring a cat</li>
+    <li><a href="https://git.gay/tox/rip">rip</a> ::: music ripper</li>
+    <li><a href="https://github.com/tox-wtf/tuun">tuun</a> ::: mpv-based music player</li>
+    <li><a href="https://github.com/tox-wtf/lfstage">lfstage</a> ::: lfs stage file generator</li>
+    <li><a href="https://github.com/tox-wtf/permitit">permitit</a> ::: cute error handling crate</li>
+    <li><a href="https://github.com/tox-wtf/catfetch">catfetch</a> ::: cute fetch script featuring a cat</li>
+    <li><a href="https://github.com/tox-wtf/tinaries">tinaries</a> ::: tiny binaries</li>
+    <li><a href="https://github.com/tox-wtf/versort">versort</a> ::: semver sorter</li>
+    <li><a href="https://github.com/tox-wtf/vagrant">vagrant</a> ::: version aggregator and tracker</li>
 </ul>
 
 {% endblock %}
