fix: add missing raw blocks

--- a/pages/self/bio.html
+++ b/pages/self/bio.html
@@ -18,6 +18,7 @@ nocturnal. I'm an anarchocommunist, an antitheist, and generally an iconoclast.
 I fit best under the agender umbrella. As for pronouns:
 </p>
 
+{% raw %}
 <pre><code>use regex::Regex;
 use std::sync::LazyLock as Lock;
 
@@ -35,6 +36,7 @@ fn main() {
     assert! { !RE.is_match("1/2") };
 }
 </code></pre>
+{% endraw %}
 
 <p>
 I love music, especially the experimental, niche, and abrasive; my ever-growing
